--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@velarprotocol/velar-sdk": "^0.6.8",
     "antd": "^5.1.5",
     "axios": "^1.2.3",
+    "d3-shape": "^3.2.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "recharts": "^2.13.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
